# mysqlalchemy

./: .gitignore  european_database.sqlite  main.py  menu.py  pyproject.toml  requirements.txt
models/: __init__.py  auth.py  db.py  manager.py  student.py
views/: __init__.py  user.py
